# TMA4280LABS

project1/: compute_sum.c  compute_sum.h  compute_sum_openmp.c  unittest.h
project1/mach0/: Makefile  mach0.c
project1/mach1/: Makefile  mach1.c
project1/mach2/: Makefile  mach2.c
project1/reduc/: compute_sum.c  zeta1.c
project1/zeta0/: Makefile  zeta0.c
project1/zeta1/: Makefile  zeta1.c
project1/zeta2/: Makefile  zeta2.c
project2/: CMakeLists.txt  poisson.cpp
project2/parallel/: CMakeLists.txt  poisson.cpp  slice.h  slicetest.cpp  submatrix.h
project2/serial/: CMakeLists.txt  poisson.c
